crates/analyzer/tests/snapshots/errors__module_const_non_base_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: Non-primitive types not yet supported for constants
  ┌─ compile_errors/module_const_non_base_type.fe:1:12
  │
1 │ const FOO: String<3> = "foo"
  │            ^^^^^^^^^ this has type `String<3>`; expected a primitive type


